unpackaged/main/default/objects/FLAGS__AgingCriteria__c/FLAGS__AgingCriteria__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store aging criteria associated with Case Flags Custom Aging.</description>
    <label>Case Flags Aging Criteria</label>
</CustomObject>