unpackaged/main/default/objects/FLAGS__AgingCriteria__c/fields/FLAGS__Field__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Field__c</fullName>
    <label>Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>