unpackaged/main/default/objects/FLAGS__AgingCriteria__c/fields/FLAGS__Operator__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Operator__c</fullName>
    <label>Operator</label>
    <length>16</length>
    <type>Text</type>
</CustomField>