unpackaged/main/default/objects/FLAGS__AgingCriteria__c/fields/FLAGS__Value__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>